<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/stringMode"
      android:title="@string/encrypt_string"
      app:showAsAction="never"/>

  <item
      android:id="@+id/integerMode"
      android:title="@string/encrypt_integer"
      app:showAsAction="never"/>

  <item
      android:id="@+id/objectMode"
      android:title="@string/encrypt_object"
      app:showAsAction="never"/>

  <item
      android:id="@+id/listMode"
      android:title="@string/encrypt_list"
      app:showAsAction="never"/>

  <item
      android:id="@+id/asynchronousCheckbox"
      android:checkable="true"
      android:checked="true"
      android:title="@string/asynchronous"
      app:showAsAction="never"/>

</menu>