<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/listEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/size_of_list"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_to_encrypt"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/listToEncryptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/encryptListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/encrypt_list"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_list"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/encryptedListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/decryptListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/decrypt_list"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypted_list"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/decryptedListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

</ScrollView>