<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/objectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/size_of_list"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_to_encrypt"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/objectToEncryptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/encryptObjectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/encrypt_object"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_object"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/encryptedObjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/decryptObjectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/decrypt_object"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypted_object"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/decryptedObjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

</ScrollView>